# cekeh-client

./: .gitmodules  CMakeLists.txt  README.md  compile  run
src/: config.h.in  main.cpp  window.h  window.hpp
src/graphics/: mesh.h  mesh.hpp  shader.hpp  shader.hpp~
src/util/: loader.h  loader.hpp
